--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Isotopic 256</title>
+  <title>Isotopic 2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -29,13 +29,13 @@
 }(document, 'script', 'facebook-jssdk'));</script>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Isotopic 256</h1>
+      <h1 class="title">Isotopic 2048</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Join the elements and get to the tile with <strong>256 isotopic mass!</strong> Watch out for unstable elements though, as these won't be around forever!</p>
+    <p class="game-intro">Join the elements and get to the tile with <strong>2048 isotopic mass!</strong> Watch out for unstable elements though, as these won't be around forever!</p>
 
     <div class="game-container">
       <div class="game-message">
@@ -54,16 +54,25 @@
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
         <div class="grid-row">
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
           <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
+        </div>
+	<div class="grid-row">
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+          <div class="grid-cell"></div>
+	  <div class="grid-cell"></div>
         </div>
       </div>
 
@@ -80,14 +89,14 @@
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
     <hr>
-    <p><strong class="important">Update <small>(8th April)</small>:</strong> I've created an official Facebook page for this game, which can be found <a href="https://www.facebook.com/Isotopic256">here</a>. I'd love to hear any suggestions you may have!</p>
+    <p><strong class="important">Update <small>(8th April)</small>:</strong> Somebody created an official Facebook page for the original version of Isotopic 256, which can be found <a href="https://www.facebook.com/Isotopic256">here</a>. He'd love to hear any suggestions you may have!</p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is a fork of the official version of 2048, which can be found <a href="http://gabrielecirulli.github.io/2048/">here</a>.
+    <strong class="important">Note:</strong> This site is also a fork of the official version of 2048, which can be found <a href="http://gabrielecirulli.github.io/2048/">here</a>.
     </p>
     <hr>
     <p>
-    Modified by <a href="http://jamesmdonnelly.com" target="_blank">James Donnelly</a>. Forked from 2048 by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Official Isotopic 256 modified by <a href="http://jamesmdonnelly.com" target="_blank">James Donnelly</a>. Forked from 2048 by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <div class="sharing">
       <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out Isotopic 256, a game where you join elements to score high! #isotopic256" data-via="inb4" data-url="http://jamesdonnelly.github.io/Isotopic256" data-counturl="http://jamesdonnelly.github.io/Isotopic256">Tweet</a>
